--- a/Lab1.inform/Index/Kinds.html
+++ b/Lab1.inform/Index/Kinds.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<357;i++) {
+            for (var i=0;i<356;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -683,7 +683,7 @@
     <p class="tightin2">Represents anything interactive in the model
     world that is not a room. People, pieces of scenery, furniture, doors and
     mislaid umbrellas might all be examples, and so might more surprising things
-    like the sound of birdsong or a shaft of sunlight.<br><i>Usually</i> unlit <i>not</i> lit, inedible <i>not</i> edible, portable <i>not</i> fixed in place, described <i>not</i> undescribed, unmarked for listing <i>not</i> marked for listing, mentioned <i>not</i> unmentioned.<br><i>Usually not</i> scenery, wearable, pushable between rooms, handled.<br><i>Can have</i> description (<i>text</i>), initial appearance (<i>text</i>), matching key (<i>object</i>).<br></p><p class="tightin2"><font color="#808080">yourself</font>, <font color="#808080">metal bed frame</font>&nbsp;<a href="source:story.ni#line7"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">raggedy old mattress</font>&nbsp;<a href="source:story.ni#line9"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">metal table</font>&nbsp;<a href="source:story.ni#line11"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">old wooden dreidel</font>&nbsp;<a href="source:story.ni#line13"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="halftightin3"><a name=K4_door></a><b>door</b> (<i>plural</i> doors)&nbsp;<a href=inform:/doc37.html><img border=0 src=inform:/doc_images/help.png></a></p>
+    like the sound of birdsong or a shaft of sunlight.<br><i>Usually</i> unlit <i>not</i> lit, inedible <i>not</i> edible, portable <i>not</i> fixed in place, described <i>not</i> undescribed, unmarked for listing <i>not</i> marked for listing, mentioned <i>not</i> unmentioned.<br><i>Usually not</i> scenery, wearable, pushable between rooms, handled.<br><i>Can have</i> description (<i>text</i>), initial appearance (<i>text</i>), matching key (<i>object</i>).<br></p><p class="tightin2"><font color="#808080">yourself</font>, <font color="#808080">metal bed frame</font>&nbsp;<a href="source:story.ni#line10"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">raggedy old mattress</font>&nbsp;<a href="source:story.ni#line12"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">metal table</font>&nbsp;<a href="source:story.ni#line14"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">old wooden dreidel</font>&nbsp;<a href="source:story.ni#line16"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="halftightin3"><a name=K4_door></a><b>door</b> (<i>plural</i> doors)&nbsp;<a href=inform:/doc37.html><img border=0 src=inform:/doc_images/help.png></a></p>
     <p class="tightin3">Represents a conduit joining two rooms, most
     often a door or gate but sometimes a plank bridge, a slide or a hatchway.
     Usually visible and operable from both sides (for instance if you write
@@ -702,7 +702,7 @@
     player can carry around as a sort of rucksack, into which spare items are
     automatically stowed away.<br><i>Always</i> portable <i>not</i> fixed in place.<br><i>Usually</i> openable <i>not</i> unopenable.<br></p><p class="tightin4"></p><p class="halftightin3"><a name=K6_supporter></a><b>supporter</b> (<i>plural</i> supporters)</p>
     <p class="tightin3">Represents a surface on which things can be
-    placed, such as a table.<br><i>Usually</i> fixed in place <i>not</i> portable.<br><i>Usually not</i> enterable.<br><i>Can have</i> carrying capacity (<i>number</i>).<br></p><p class="tightin3"><font color="#808080">metal bed frame</font>&nbsp;<a href="source:story.ni#line7"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">metal table</font>&nbsp;<a href="source:story.ni#line11"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="halftightin3"><a name=K7_backdrop></a><b>backdrop</b> (<i>plural</i> backdrops)&nbsp;<a href=inform:/doc34.html><img border=0 src=inform:/doc_images/help.png></a></p>
+    placed, such as a table.<br><i>Usually</i> fixed in place <i>not</i> portable.<br><i>Usually not</i> enterable.<br><i>Can have</i> carrying capacity (<i>number</i>).<br></p><p class="tightin3"><font color="#808080">metal bed frame</font>&nbsp;<a href="source:story.ni#line10"><img border=0 src=inform:/doc_images/Reveal.tif></a>, <font color="#808080">metal table</font>&nbsp;<a href="source:story.ni#line14"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p class="halftightin3"><a name=K7_backdrop></a><b>backdrop</b> (<i>plural</i> backdrops)&nbsp;<a href=inform:/doc34.html><img border=0 src=inform:/doc_images/help.png></a></p>
     <p class="tightin3">Represents an aspect of the landscape
     or architecture which extends across more than one room: for instance,
     a stream, the sky or a long carpet.<br><i>Always</i> fixed in place <i>not</i> portable.<br><i>Usually</i> scenery.<br><i>Never</i> pushable between rooms.<br></p><p class="tightin3"></p><p class="halftightin3"><a name=K8_person></a><b>person</b> (<i>plural</i> people)&nbsp;<a href=inform:/doc42.html><img border=0 src=inform:/doc_images/help.png></a></p>
@@ -842,6 +842,7 @@
     <p><b>Command parser errors</b><br>latest parser error - <i>command parser error</i><br>
     <p><b>Grammatical definitions</b><br>story tense&nbsp;<a href='inform://Extensions/Extensions/Graham%20Nelson/English%20Language.html' title="English Language by Graham Nelson" STYLE="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a> - <i>grammatical tense</i><br>
     story viewpoint&nbsp;<a href='inform://Extensions/Extensions/Graham%20Nelson/English%20Language.html' title="English Language by Graham Nelson" STYLE="text-decoration: none"><img border=0 src=inform:/doc_images/Revealext.png></a> - <i>narrative viewpoint</i><br>
+    <p>SpinCount&nbsp;<a href="source:story.ni#line7"><img border=0 src=inform:/doc_images/Reveal.tif></a> - <i>number</i><br>
     <p><b>List of Named or Numbered Equations</b> (<i>About equations</i>&nbsp;<a href=inform:/doc243.html><img border=0 src=inform:/doc_images/help.png></a>)<p>
     <p><i>None</i>.</p></div>
     <hr>
